// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should abbreviate multiple string selections 1`] = `
<React.Fragment>
  <Icon
    className="indicator active"
    type="filter"
  />
   
  <VariablePreview
    filter={
      Object {
        "operator": "not in",
        "values": Array [
          "multiple",
        ],
      }
    }
  />
</React.Fragment>
`;

exports[`should show the operator when no value is selected 1`] = `
<React.Fragment>
  <Icon
    className="indicator"
    type="filter"
  />
   
  is not ...
</React.Fragment>
`;
